@@ -4,28 +4,32 @@ import com.bootgussy.dancecenterservice.api.dto.create.StudentCreateDto;
 import com.bootgussy.dancecenterservice.api.dto.response.StudentResponseDto;
 import com.bootgussy.dancecenterservice.core.model.Group;
 import com.bootgussy.dancecenterservice.core.model.Student;
-
-import java.util.ArrayList;
+import com.bootgussy.dancecenterservice.core.repository.GroupRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
-import org.mapstruct.Named;
+import org.springframework.beans.factory.annotation.Autowired;
 
 @Mapper(componentModel = "spring")
-public interface StudentMapper {
-    @Mapping(source = "groups", target = "groupsId", qualifiedByName = "mapGroups")
-    StudentResponseDto toResponseDto(Student student);
+public abstract class StudentMapper {
+    @Autowired
+    protected GroupRepository groupRepository;
 
-    List<StudentResponseDto> toResponseDtoList(List<Student> students);
+    public abstract Student toEntity(StudentCreateDto studentCreateDto);
 
-    Student toEntity(StudentCreateDto dto);
+    @Mapping(target = "groupsId",
+            expression = "java(student.getGroups() != null " +
+                    "? " +
+                    "student.getGroups().stream().map(g -> g.getId()).toList() " +
+                    ": " +
+                    "new ArrayList<>())")
+    public abstract StudentResponseDto toResponseDto(Student student);
 
-    @Named("mapGroups")
-    default List<Long> mapGroups(List<Group> groups) {
-        if (groups == null) {
-            return new ArrayList<>();
-        }
-        return groups.stream().map(Group::getId).collect(Collectors.toList());
-    }
+    @Mapping(target = "groupsId",
+            expression = "java(student.getGroups() != null " +
+                    "? " +
+                    "student.getGroups().stream().map(g -> g.getId()).toList() " +
+                    ": " +
+                    "new ArrayList<>())")
+    public abstract List<StudentResponseDto> toResponseDtoList(List<Student> students);
 }
